--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
                 font-family: sans-serif;
                 font-size: 20px;
                 color: #00ff9594;
-                /* text-align: center; */
             }
             #login {
                 width: 300px;
                 height: 350px;
                 border: 2px solid ;
                 border-radius: 5px;
-                /* background-color: #0d41418e; */
             }
             h1, form {
                 padding-left: 10px;
@@ -41,6 +39,7 @@
             }
 
             .log {
+                background-color: #242424;
                 color: #00ff9594;
                 font-size: 20px;
                 width: 70px;
@@ -54,7 +53,7 @@
 
             <h1>Login</h1>
             <form action="" method="get">
-                 <span>Email:</span><br>
+                 Email:<br>
                  <input type="email" required name="email"><br><br>
                  Password:<br>
                  <input type="password" minlength="5" name="password"><br><br>
